bk_ida/gccida/c1/print_mem_expr
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_mem_expr/src/print-rtl.c:550:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_mem_expr/src/print-rtl.c:584:22: error: use of undeclared identifier 'unk_6C3BD6'
v8 = ( const char *)&unk_6C3BD6; 
                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_mem_expr/src/obj/print-rtl.o] Error 1
